tests/badly_positioned_func_sig/badly_positioned_func_sig.exp
Error ----------------------------------------------------------------------------------------------------- test.js:4:27

Cannot initialize property `foo` with object literal because in property `bar`: string [1] is incompatible with
number [2]. [incompatible-type]

   test.js:4:27
   4|   foo: {bar: Bar} = {bar: 'cat'};
                                ^^^^^ [1]

References:
   test.js:4:14
   4|   foo: {bar: Bar} = {bar: 'cat'};
                   ^^^ [2]



Found 1 error
